[package]
name = "lsm-engine"
version = "0.1.0"
authors = ["NavyaZaveri <navyajayesh+1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1.0"
lazy_static = "1.4.0"
derive_builder = { version = "0.9.0"}



