[package]
name = "lsm_engine"
version = "0.1.0"
authors = ["NavyaZaveri"]
description = "A rust implementation of a key-value using LSM trees"
keywords = ["algorithms", "database", "lsm-trees", "key-value-engine"]
categories =[ "algorithms", "database", "lsm-trees", "key-value-engine"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lsm_engine"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1.0"
lazy_static = "1.4.0"
thiserror = "1.0"
binary-heap-plus = "0.2.0"
rand = "0.7.3"








